<resources>
    <string name="app_name">DeGroshi</string>
    <string name="txt_spent_on_what"> Cплачено за: </string>
    <string name="btn_add_spent">Додати iншу</string>
    <string name="dlg_new_title">Нова витрата</string>
    <string name="dlg_new_hint">Введiть назву</string>
    <string name="btn_dlg_tak">Taк</string>
    <string name="btn_dlg_ni">Hi</string>
    <string name="btn_statistics_view">Статистика</string>
    <string name="dlg_sum_hint">Скiльки витрачено?</string>
    <string name="dlg_input_sum_title">О HI!!!</string>
    <string name="btn_eraseDB">Онулити статистику</string>
    <string name="btn_delete_spent">Видалити витрату</string>
    <string name="dlg_select_date_from">З</string>
    <string name="dlg_select_date_to">По</string>
    <string name="txt_statistics">Статистика</string>
    <string name="btn_dlg_pick_color">Колiр</string>
    <string name="btn_pick_date_from">преіод з:</string>
    <string name="btn_pick_date_to">період по:</string>
    <string name="btn_dlg_date_pick">Дата</string>
</resources>
