<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:baselineAligned="false">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="4dp"
        android:inputType="text"
        android:text="@string/dlg_new_title"
        android:id="@+id/dlg_new_title"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="4dp"
        android:hint="@string/dlg_sum_hint"
        android:id="@+id/dlg_input_sum"
        android:clickable="false"
        android:numeric="integer"
        android:maxLength="7"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btn_dlg_date_pick"
            android:text="@string/btn_dlg_date_pick"
            android:layout_gravity="right"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btn_dlg_color_pick"
            android:text="@string/btn_dlg_pick_color"
            android:layout_gravity="left"/>
    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btn_dlg_sum_tak"
        android:text="@string/btn_dlg_tak"
        android:layout_gravity="center_horizontal"/>




</LinearLayout>